fix: Calendar z-index

--- a/ui/Form/Form.module.scss
+++ b/ui/Form/Form.module.scss
@@ -247,7 +247,8 @@
 		opacity: 0;
 		z-index: -1;
 		transform-origin: 50% 0;
-		transition: all var(--transition-primary), z-index 0s linear 0.5s;
+		transition: all var(--transition-primary), z-index 0s linear 0.5s, visibility 0s linear 0.5s;
+		visibility: hidden;
 		
 		& > div {
 			width: 100%;
@@ -258,7 +259,8 @@
 		opacity: 1;
 		transform: scale(1) translateY(35px);
 		z-index: 6;
-		transition: all var(--transition-primary), z-index 0s linear 0s;
+		transition: all var(--transition-primary), z-index 0s linear 0s, visibility 0s linear 0s;
+		visibility: visible;
 	}
 }
 
